# ha-teams-events

./: .gitignore  README.md  repository.yaml
.github/workflows/: ci-addon.yml  release-addon.yml
addon/jabra_events/: DOCS.md  Dockerfile  build.yaml  config.yaml
addon/jabra_events/app/: calendar_watcher.py  event_router.py  graph_client.py  ha_client.py  health.py  main.py  models.py  pyproject.toml  relay_ws_client.py
addon/teams_events/: DOCS.md  Dockerfile  build.yaml  config.yaml  requirements.txt  run.sh
addon/teams_events/app/: calendar_watcher.py  cert_store.py  config.py  event_router.py  graph_client.py  ha_client.py  health_publisher.py  main.py  models.py  notification_decrypt.py  pyproject.toml  subscription_manager.py  subscription_store.py
docs/: architecture.md  lovelace.dashboard_teams_events.json  operations.md
infra/cdk/: README.md  app.py  cdk.json  requirements.txt
infra/cdk/stacks/: relay_stack.py
relay/lambda/: webhook_handler.py  websocket_connect.py  websocket_default.py  websocket_disconnect.py
relay/lambda/shared/: auth.py  connections.py  forwarder.py
