[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jabra-events-addon"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "msal>=1.28",
    "python-dateutil>=2.9",
    "websockets>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
